--- a/fdr-node/src/main/resources/fdr/query.properties
+++ b/fdr-node/src/main/resources/fdr/query.properties
@@ -8,7 +8,7 @@
 #
 # \u67E5\u8BE2\u65F6\u6BCF\u4E00\u4E2A period \u7684\u6700\u5927\u8DE8\u5EA6\u3002
 # query.xxx.max_period_span=86400000
-# \u67E5\u8BE2\u662F\u6BCF\u4E00\u9875\u7684\u6700\u5927\u6570\u636E\u91CF\u3002
+# \u67E5\u8BE2\u65F6\u6BCF\u4E00\u9875\u7684\u6700\u5927\u6570\u636E\u91CF\u3002
 # query.xxx.max_page_size=1000
 #
 #-------------------------------------------\u4E00\u822C\u67E5\u8BE2\u53C2\u6570\u914D\u7F6E\u8BF4\u660E-------------------------------------------
