--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <!-- 集中定义依赖版本号 -->
         <javassist.version>3.23.2-GA</javassist.version>
         <junit.version>4.13.2</junit.version>
-        <spring.version>5.3.37</spring.version>
+        <spring.version>5.3.39</spring.version>
         <protobuf.version>3.25.5</protobuf.version>
         <mysql.version>8.2.0</mysql.version>
         <fastjson.version>1.2.83</fastjson.version>
@@ -39,8 +39,8 @@
         <gson.version>2.8.9</gson.version>
         <snakeyaml.version>2.0</snakeyaml.version>
         <dubbo.version>2.7.22</dubbo.version>
-        <netty.version>4.1.108.Final</netty.version>
-        <zookeeper.version>3.7.2</zookeeper.version>
+        <netty.version>4.1.115.Final</netty.version>
+        <zookeeper.version>3.9.3</zookeeper.version>
         <guava.version>32.0.1-jre</guava.version>
         <curator.version>4.3.0</curator.version>
         <aspectj.version>1.8.2</aspectj.version>
@@ -52,10 +52,10 @@
         <jboss-logging.version>3.4.3.Final</jboss-logging.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <dutil.version>beta-0.3.2.a</dutil.version>
-        <snowflake.version>1.5.2.a</snowflake.version>
-        <subgrade.version>1.5.6.a</subgrade.version>
-        <spring-terminator.version>1.0.13.a</spring-terminator.version>
-        <spring-telqos.version>1.1.10.a</spring-telqos.version>
+        <snowflake.version>1.5.3.a</snowflake.version>
+        <subgrade.version>1.5.7.a</subgrade.version>
+        <spring-terminator.version>1.0.14.a</spring-terminator.version>
+        <spring-telqos.version>1.1.11.b</spring-telqos.version>
         <dcti.version>1.1.9.a</dcti.version>
         <dwarfeng-dct.version>1.0.0.a</dwarfeng-dct.version>
         <jackson.version>2.14.0</jackson.version>
