--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,12 @@
         <druid.version>1.1.20</druid.version>
         <jedis.version>3.8.0</jedis.version>
         <spring-data-redis.version>2.7.5</spring-data-redis.version>
-        <kafka.version>3.6.1</kafka.version>
+        <kafka.version>3.9.0</kafka.version>
         <spring-kafka.version>2.9.11</spring-kafka.version>
         <gson.version>2.8.9</gson.version>
         <snakeyaml.version>2.0</snakeyaml.version>
         <dubbo.version>2.7.22</dubbo.version>
-        <netty.version>4.1.115.Final</netty.version>
+        <netty.version>4.1.119.Final</netty.version>
         <zookeeper.version>3.9.3</zookeeper.version>
         <guava.version>32.0.1-jre</guava.version>
         <curator.version>4.3.0</curator.version>
@@ -52,14 +52,14 @@
         <jboss-logging.version>3.4.3.Final</jboss-logging.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <dutil.version>beta-0.3.2.a</dutil.version>
-        <snowflake.version>1.5.3.a</snowflake.version>
-        <subgrade.version>1.5.7.a</subgrade.version>
+        <snowflake.version>1.7.1.a</snowflake.version>
+        <subgrade.version>1.5.11.a</subgrade.version>
         <spring-terminator.version>1.0.14.a</spring-terminator.version>
-        <spring-telqos.version>1.1.11.b</spring-telqos.version>
-        <dcti.version>1.1.9.a</dcti.version>
-        <dwarfeng-dct.version>1.0.0.a</dwarfeng-dct.version>
-        <jackson.version>2.14.0</jackson.version>
-        <groovy.version>4.0.6</groovy.version>
+        <spring-telqos.version>1.1.14.a</spring-telqos.version>
+        <dcti.version>1.1.12.a</dcti.version>
+        <dwarfeng-dct.version>1.0.3.a</dwarfeng-dct.version>
+        <jackson.version>2.18.3</jackson.version>
+        <groovy.version>4.0.26</groovy.version>
         <influxdb.version>6.12.0</influxdb.version>
         <!-- Maven 插件版本声明 -->
         <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
