--- a/fdr-impl/src/test/resources/fdr/consume.properties
+++ b/fdr-impl/src/test/resources/fdr/consume.properties
@@ -4,14 +4,22 @@ consume.threshold.warn=0.8
 #---------------------------------\u914D\u7F6E\u8BF4\u660E----------------------------------------
 # \u6D88\u8D39\u8005\u7EBF\u7A0B\u6570\uFF1A\u7EBF\u7A0B\u6570\u8D8A\u5927\uFF0C\u5904\u7406\u7684\u80FD\u529B\u8D8A\u5F3A\uFF0C\u670D\u52A1\u5668\u8D1F\u8377\u8D8A\u91CD\u3002
 # consume.xxx.consumer_thread=1
+#
 # \u7F13\u5B58\u5927\u5C0F\uFF1A\u7F13\u5B58\u8D8A\u5927\u6297\u6CE2\u52A8\u80FD\u529B\u8D8A\u5F3A\uFF0C\u6570\u636E\u5B9E\u65F6\u6027\u8D8A\u4F4E\u3002
 # \u5F53\u7F13\u5B58\u88AB\u5360\u6EE1\u65F6\uFF0C\u4F1A\u5BFC\u81F4\u6D88\u8D39\u8005\u963B\u585E\u3002
-# \u6570\u636E\u5360\u6EE1\u7F13\u5B58\u8FD9\u4E00\u73B0\u8C61\u662F\u9700\u8981\u5C3D\u529B\u907F\u514D\u7684\uFF0C\u7A0B\u5E8F\u5C06\u5728\u7F13\u5B58\u5360\u7528\u91CF\u8D85\u8FC7\u6307\u5B9A\u503C\u7684\u65F6\u5019\u53D1\u51FA\u8B66\u62A5\uFF0C\u5E76\u5728\u7F13\u5B58\u88AB\u5360\u6EE1\u7684\u65F6\u5019\u53D1\u51FAERROR\u63D0\u793A\u3002
+# \u6570\u636E\u5360\u6EE1\u7F13\u5B58\u8FD9\u4E00\u73B0\u8C61\u662F\u9700\u8981\u5C3D\u529B\u907F\u514D\u7684\uFF0C\u7A0B\u5E8F\u5C06\u5728\u7F13\u5B58\u5360\u7528\u91CF\u8D85\u8FC7\u6307\u5B9A\u503C\u7684\u65F6\u5019\u53D1\u51FA\u8B66\u62A5\u793A\u3002
 # consume.xxx.buffer_size=1000
-# \u6279\u5904\u7406\u4E2A\u6570\uFF1A\u6279\u5904\u7406\u4E2A\u6570\u8D8A\u591A\uFF0C\u5E73\u5747\u6BCF\u4E2A\u5143\u7D20\u6D88\u8D39\u901F\u5EA6\u8D8A\u5FEB\uFF0C\u6570\u636E\u5B9E\u65F6\u6027\u8D8A\u4F4E\u3002
+#
+# \u6279\u5904\u7406\u4E2A\u6570\uFF1A\u7F13\u5B58\u7684\u6570\u91CF\u5230\u8FBE\u6279\u5904\u7406\u4E2A\u6570\u4E4B\u524D\uFF0C\u6570\u636E\u4E0D\u4F1A\u88AB\u6D88\u8D39\uFF0C\u6D88\u8D39\u7EBF\u7A0B\u963B\u585E\uFF1B\u5230\u8FBE\u6279\u5904\u7406\u4E2A\u6570\u4E4B\u540E\uFF0C\u8FD9\u6279\u6570\u636E\u5C06\u88AB\u7ACB\u523B\u6D88\u8D39\u3002
+# \u90E8\u5206\u6865\u63A5\u5668\u6279\u5904\u7406\u6570\u636E\u65F6\u5177\u6709\u901F\u5EA6\u52A0\u6210\uFF08\u5982\u6570\u636E\u5E93\u7684\u6279\u91CF\u63D2\u5165\uFF09\uFF0C
+# \u5728\u8FD9\u79CD\u60C5\u51B5\u4E0B\uFF0C\u6279\u5904\u7406\u4E2A\u6570\u8D8A\u591A\uFF0C\u5E73\u5747\u6BCF\u4E2A\u5143\u7D20\u6D88\u8D39\u901F\u5EA6\u8D8A\u5FEB\uFF0C\u4F46\u7531\u4E8E\u79EF\u6512\u6279\u91CF\u6240\u9700\u7684\u65F6\u95F4\u53D8\u957F\uFF0C\u6570\u636E\u5B9E\u65F6\u6027\u964D\u4F4E\u3002
+# \u8BE5\u503C\u5C0F\u4E8E\u7B49\u4E8E 0 \u65F6\u610F\u5473\u7740\u7981\u7528\u6279\u5904\u7406\u529F\u80FD\uFF0C\u53EA\u8981\u7F13\u5B58\u4E2D\u6709\u6570\u636E\u5C31\u7ACB\u523B\u6D88\u8D39\uFF0C\u6570\u636E\u5B9E\u65F6\u6027\u6700\u9AD8\uFF0C\u4F46\u670D\u52A1\u5668\u8D1F\u8377\u4E5F\u6700\u9AD8\u3002
 # consume.xxx.batch_size=100
-# \u6700\u5927\u7A7A\u95F2\u65F6\u95F4\uFF1A\u5373\u4F7F\u7F13\u5B58\u4E2D\u6570\u636E\u6CA1\u6709\u8FBE\u5230\u6279\u5904\u7406\u6700\u5C0F\u4E2A\u6570\uFF0C\u4E5F\u4E0D\u80FD\u5728\u7A7A\u95F2\u8D85\u8FC7\u6307\u5B9A\u7684\u65F6\u95F4\uFF0C\u6570\u503C\u8D8A\u4F4E\uFF0C\u6570\u636E\u5B9E\u65F6\u6027\u8D8A\u9AD8\uFF0C\u670D\u52A1\u5668\u8D1F\u8377\u8D8A\u91CD\u3002
-# \u8BE5\u503C\u8BBE\u7F6E\u4E3A\u5C0F\u4E8E0\u7684\u6570\u610F\u5473\u7740\u7981\u7528\u6700\u5927\u7A7A\u95F2\u65F6\u95F4\u68C0\u67E5\uFF0C\u5728\u6700\u574F\u7684\u60C5\u51B5\u4E0B\uFF0C\u6B64\u79CD\u8BBE\u7F6E\u4F1A\u5BFC\u81F4\u5C11\u4E8E\u6279\u5904\u7406\u4E2A\u6570\u7684\u5143\u7D20\u65E0\u9650\u671F\u7684\u5728\u7F13\u5B58\u4E2D\u7B49\u5F85\u3002
+#
+# \u6700\u5927\u7A7A\u95F2\u65F6\u95F4\uFF1A\u4E3A\u4E86\u9632\u6B62\u6570\u636E\u751F\u4EA7\u901F\u5EA6\u8FC7\u6162\u65F6\uFF0C\u6570\u636E\u5728\u7F13\u5B58\u4E2D\u957F\u671F\u7B49\u5F85\u8FD9\u79CD\u73B0\u8C61\u7684\u53D1\u751F\uFF0C
+# \u53EF\u4EE5\u8BBE\u7F6E\u4E00\u4E2A\u6700\u5927\u7A7A\u95F2\u65F6\u95F4\uFF0C\u5F53\u7F13\u5B58\u4E2D\u6570\u636E\u7684\u7B49\u5F85\u65F6\u95F4\u8D85\u8FC7\u8FD9\u4E2A\u503C\u65F6\uFF0C\u5373\u4F7F\u6570\u636E\u91CF\u6CA1\u6709\u8FBE\u5230\u6279\u5904\u7406\u4E2A\u6570\uFF0C\u4E5F\u7ACB\u523B\u5C06\u8FD9\u4E9B\u6570\u636E\u6D88\u8D39\u6389\u3002
+# \u8BE5\u503C\u7684\u5355\u4F4D\u662F\u6BEB\u79D2\uFF0C\u6570\u503C\u8D8A\u4F4E\uFF0C\u6570\u636E\u5B9E\u65F6\u6027\u8D8A\u9AD8\uFF0C\u670D\u52A1\u5668\u8D1F\u8377\u8D8A\u9AD8\u3002
+# \u8BE5\u503C\u5C0F\u4E8E\u7B49\u4E8E 0 \u65F6\u610F\u5473\u7740\u7981\u7528\u6700\u5927\u7A7A\u95F2\u65F6\u95F4\u68C0\u67E5\uFF0C\u5728\u6700\u574F\u7684\u60C5\u51B5\u4E0B\uFF0C\u6B64\u79CD\u8BBE\u7F6E\u4F1A\u5BFC\u81F4\u5C11\u4E8E\u6279\u5904\u7406\u4E2A\u6570\u7684\u5143\u7D20\u65E0\u9650\u671F\u7684\u5728\u7F13\u5B58\u4E2D\u7B49\u5F85\u3002
 # consume.xxx.max_idle_time=1000
 #
 #---------------------------------\u4E00\u822C\u6570\u636E\u4FDD\u6301\u6D88\u8D39\u8005----------------------------------------
