--- a/fdr-impl/pom.xml
+++ b/fdr-impl/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.dwarfeng</groupId>
         <artifactId>fdr</artifactId>
-        <version>2.3.0.a-SNAPSHOT</version>
+        <version>2.3.0.a</version>
     </parent>
 
     <artifactId>fdr-impl</artifactId>
